Fixed privacy policy path route error

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,2 +1,2 @@
 <h1>Hola World</h1>
-<%= link_to "Privacy Policy", static_pages_privacy_policy_path %>
+<%= link_to "Privacy Policy", privacy_policy_path %>
