--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -1,3 +1,3 @@
 <h1>StaticPages#privacy_policy</h1>
 <p>Find me in app/views/static_pages/privacy_policy.html.erb</p>
-<%= link_to "Landing Page", root_path %>
+<%= link_to "Home", root_path %>
