added font awesome but icons not rendering

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,7 @@
 <h1>Hola World</h1>
 <%= link_to "Privacy Policy", privacy_policy_path %>
+<i class="fab fa-apple"></i>
+<i class="fab fa-apple"></i>
 <div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
